refactor: consolidate model backends into the monorepo (#275)
* refactor: migrate llama zarf config to the monorepo

* refactor: Consolidate vllm into the monorepo (#274)

* refactor: migrate vllm zarf config to the monorepo

* fix: explicitly request a gpu for the vllm deployment

* download all dependencies as wheels

---------

Co-authored-by: John Alling <john.alling@defenseunicorns.com>

* refactor: migrate vllm, text-embeddings, and whisper zarf config to the monorepo (#308)

* refactor: migrate vllm zarf config to the monorepo
* refactor: migrate text-embeddings zarf config to the monorepo
* refactor: migrate whisper zarf config to the monorepo (#309)

---------

Co-authored-by: John Alling <john.alling@defenseunicorns.com>

* lint: remove unused variable

* lint: format python file

* add llama dependencies to package build

* add whisper dependencies to package install

* add generated grpc code

* exclude generated grpc code from ruff scans

* chore: rename 'llama' references to llama-cpp-python

* chore: remove broken pre-commit check

* chore: update version of zarf packages to 0.1.0

* chore: remove unnecessary imagePullSecret templating

* chore: remove unnecessary NOTES.txt file from model deployments

* chore: remove unused and irrelevant templates from charts

chore: add namespace to metadata of chart templates

* chore: rename gpu veriable & template to GPU_LIMIT

* chore: update all deployment strategies to RollingUpdate

---------

Co-authored-by: John Alling <john.alling@defenseunicorns.com>

--- a/packages/api/chart/templates/api/deployment.yaml
+++ b/packages/api/chart/templates/api/deployment.yaml
@@ -2,10 +2,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-deployment
+  namespace: {{ .Release.Namespace }}
 spec:
   replicas: {{ .Values.api.replcias }}
   strategy:
-    type: Recreate
+    rollingUpdate:
+      maxUnavailable: 0
+    type: RollingUpdate
   selector:
     matchLabels:
       app: api
@@ -66,7 +69,3 @@ spec:
       volumes:
       - name: api-model
         emptyDir: {}
-        
-
-    
-  
