--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "pydantic >= 2.0",
     "click >= 8.1.7",
 ]
-requires-python = "==3.11.6"
+requires-python = "~=3.11"
 readme = "README.md"
 
 [project.optional-dependencies]
@@ -49,13 +49,31 @@ dev = [
     "ruff",
     "huggingface_hub", #TODO: @JPERRY Figure out the sub modules (cli & hf_transfer)
 ]
-llama = [
+
+llama-cpp-python = [
     "llama-cpp-python == 0.2.28",
 ]
+
 vllm = [
     "pydantic >= 2.3.0",
     "vllm==0.3.2",
+    "python-dotenv>=1.0.1",
+    "aiostream>=0.5.2",
 ]
+
+text-embeddings = [
+    "InstructorEmbedding >= 1.0.1",
+    "torch == 2.1.2",
+    "numpy == 1.26.3",
+    "tqdm == 4.66.1",
+    "sentence-transformers == 2.2.2",
+    "transformers == 4.36.0",
+]
+
+whisper = [
+    "faster-whisper == 0.10.0",
+]
+
 
 [tool.pip-tools]
 generate-hashes = true
@@ -69,6 +87,14 @@ addopts = ["--import-mode=importlib"]
 
 [tool.ruff]
 target-version = "py311"
+# exclude generated grpc code
+exclude = [
+    "src/leapfrogai_api/types/audio",
+    "src/leapfrogai_api/types/chat",
+    "src/leapfrogai_api/types/completion",
+    "src/leapfrogai_api/types/embeddings",
+    "src/leapfrogai_api/types/name",
+]
 
 
 [build-system]
