--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -50,7 +50,7 @@ jobs:
         # NOTE: We are not testing vllm in this workflow, but it is still nice to verify that it will build
         - name: Build all packages
           run: |
-            make clean build-api build-llama build-vllm build-text-embeddings build-whisper LOCAL_VERSION=e2e-test
+            make clean build-api build-llama-cpp-python build-vllm build-text-embeddings build-whisper LOCAL_VERSION=e2e-test
 
         - name: Create UDS Cluster
           run: |
@@ -61,19 +61,19 @@ jobs:
             uds zarf package deploy zarf-package-leapfrogai-api-*.tar.zst --confirm
 
         ##########
-        # llama
+        # llama-cpp-python
         ##########
-        - name: Deploy llama
+        - name: Deploy llama-cpp-python
           run: |
-            uds zarf package deploy zarf-package-llama-*.tar.zst --confirm
+            uds zarf package deploy zarf-package-llama-cpp-python-*.tar.zst --confirm
 
-        - name: Test llama
+        - name: Test llama-cpp-python
           run: |
             python -m pytest ./tests/e2e/test_llama.py -v
 
-        - name: Cleanup llama
+        - name: Cleanup llama-cpp-python
           run: |
-            uds zarf package remove llama --confirm
+            uds zarf package remove llama-cpp-python --confirm
 
         ##########
         # text-embeddings
