--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/setup-buildx-action@0d103c3126aa41d772a8362f6aa67afac040f80c # v3.1.0
 
       - name: Download Python Wheels
-        run: make setup-api-deps setup-llama-deps setup-vllm-deps setup-text-embeddings-deps setup-whisper-deps
+        run: make setup-api-deps setup-llama-cpp-python-deps setup-vllm-deps setup-text-embeddings-deps setup-whisper-deps
 
       - name: Install Zarf
         uses: defenseunicorns/setup-zarf@f95763914e20e493bb5d45d63e30e17138f981d6 # v1.0.0
@@ -53,19 +53,19 @@ jobs:
 
           rm zarf-package-leapfrogai-api-*.tar.zst
 
-      - name: Build and Publish llama
+      - name: Build and Publish llama-cpp-python
       # TODO: Is this the name we want for the image?
       # TODO: HERE AND ELSWHERE: PACKAGE_VERSION is not used in the new zarf package config. Maybe just update the zarf.yaml IMAGE_VERSION to have the version metadata set by
         run: |
-          docker buildx build --platform amd64,arm64 -t ghcr.io/defenseunicorns/leapfrogai/llama-cpp-python:${{ steps.get_version.outputs.version-without-v }} --push packages/llama
+          docker buildx build --platform amd64,arm64 -t ghcr.io/defenseunicorns/leapfrogai/llama-cpp-python:${{ steps.get_version.outputs.version-without-v }} --push packages/llama-cpp-python
 
           zarf package create . --set=IMAGE_VERSION=${{ steps.get_version.outputs.version-without-v }} --architecture amd64 --confirm
           zarf package create . --set=IMAGE_VERSION=${{ steps.get_version.outputs.version-without-v }} --architecture arm64 --confirm
 
-          zarf package publish zarf-package-llama-amd64-${{ steps.get_version.outputs.version-without-v }}.tar.zst oci://ghcr.io/defenseunicorns/packages/leapfrogai
-          zarf package publish zarf-package-llama-arm64-${{ steps.get_version.outputs.version-without-v }}.tar.zst oci://ghcr.io/defenseunicorns/packages/leapfrogai
+          zarf package publish zarf-package-llama-cpp-python-amd64-${{ steps.get_version.outputs.version-without-v }}.tar.zst oci://ghcr.io/defenseunicorns/packages/leapfrogai
+          zarf package publish zarf-package-llama-cpp-python-arm64-${{ steps.get_version.outputs.version-without-v }}.tar.zst oci://ghcr.io/defenseunicorns/packages/leapfrogai
 
-          rm zarf-package-llama-*.tar.zst
+          rm zarf-package-llama-cpp-python-*.tar.zst
 
       - name: Build and Publish vLLM
         run: |
