--- a/packages/llama-cpp-python/chart/templates/deployment.yaml
+++ b/packages/llama-cpp-python/chart/templates/deployment.yaml
@@ -38,6 +38,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          env:
+            - name: GPU_ENABLED
+              value: {{ (quote .Values.gpuEnabled) | default "false"}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
