--- a/uds-bundles/dev/gpu/uds-bundle.yaml
+++ b/uds-bundles/dev/gpu/uds-bundle.yaml
@@ -1,36 +1,36 @@
 kind: UDSBundle
 metadata:
   name: leapfrogai
-  description: A UDS bundle for deploying LeapfrogAI
+  description: A UDS bundle for deploying LeapfrogAI with GPU support
   version: 0.2.1
 
 packages:
   # OpenAI-like API 
   - name: leapfrogai-api
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-api
+    repository: ../../../packages/api
     ref: 0.5.3
 
-  # AI chat, transcription, and summarization frontend
+  # AI chat, transcription, and summarization frontend - not currently in this repo so it builds from ghcr
   - name: leapfrogai-ui
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-ui
     ref: 0.3.5
 
   # Model for generic chat and summarization
   - name: vllm
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/vllm
+    repository: ../../../packages//vllm
     ref: 0.1.0
 
   # Model for providing vector embeddings for text
   - name: text-embeddings
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/text-embeddings
+    repository: ../../../packages/text-embeddings
     ref: 0.1.0
 
-  # Backend capability for RAG and VectorDB
+  # Backend capability for RAG and VectorDB - - not currently in this repo so it builds from ghcr
   - name: rag
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/rag
     ref: 0.3.1
 
   # Model for converting audio to text
   - name: whisper
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/whisper
+    repository: ../../../packages/whisper
     ref: 0.5.2
