--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -14,6 +14,7 @@ ARG PROMPT_FORMAT_CHAT_ASSISTANT="ASSISTANT: {}\n"
 ARG PROMPT_FORMAT_CHAT_USER="USER: {}\n"
 ARG PROMPT_FORMAT_DEFAULTS_TOP_P=1.0
 ARG PROMPT_FORMAT_DEFAULTS_TOP_K=0
+ARG TENSOR_PARALLEL_SIZE=1
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -63,6 +64,7 @@ ENV LAI_HF_HUB_ENABLE_HF_TRANSFER=${HF_HUB_ENABLE_HF_TRANSFER}
 ENV LAI_REPO_ID=${REPO_ID}
 ENV LAI_REVISION=${REVISION}
 ENV LAI_QUANTIZATION=${QUANTIZATION}
+ENV LAI_TENSOR_PARALLEL_SIZE=${TENSOR_PARALLEL_SIZE}
 ENV LAI_MODEL_SOURCE=${MODEL_SOURCE}
 ENV LAI_MAX_CONTEXT_LENGTH=${MAX_CONTEXT_LENGTH}
 ENV LAI_STOP_TOKENS=${STOP_TOKENS}
