--- a/uds-bundles/dev/gpu/uds-config.yaml
+++ b/uds-bundles/dev/gpu/uds-config.yaml
@@ -35,7 +35,7 @@ variables:
     requests_gpu: 1
     limits_gpu: 1
     quantization: gptq
-    tensor_parallel_size: 1
+    #tensor_parallel_size: 1   # TODO: reintroduce when vllm changes get pulled in
     
   rag:
     model: vllm
