--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -6,21 +6,17 @@ metadata:
   description: >
     supabase instance and all of its dependencies
 
-constants:
-  - name: IMAGE_VERSION
-    value: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
-
 components:
   - name: supabase
     required: true
     charts:
       - name: supabase
         namespace: leapfrogai
-        localPath: supabase
+        localPath: supabase-kubernetes/charts/supabase
         releaseName: supabase
-        version: 0.0.1 #TODO: Validate this package version
+        version: 0.0.1
         valuesFiles:
-          - "values.example.yaml"
+          - "supabase-kubernetes/charts/supabase/values.example.yaml"
     images:
       - supabase/studio:20230127-6bfd87b
       - supabase/postgres:14.1.0.105
