--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,60 +19,13 @@ dependencies = [
 requires-python = "~=3.11"
 readme = "README.md"
 
-[project.optional-dependencies]
-
-# NOTE @JPERRY: I have removed 'toml >= 0.10.2', 'pydantic >= 2.3.0', and 'pyyaml >= 6.0.1'
-# TODO @JPERRY: These deps are no in the core 'dependencies' list. Consider removing this list.
-api = [
-    "fastapi >= 0.109.1",
-    "uvicorn >= 0.23.2",
-    "pydantic",
-    "python-multipart >= 0.0.7", #indirect dep of FastAPI to receive form data for file uploads
-    "watchfiles >= 0.21.0",
-]
-
-# TODO @JPERRY: These deps are no in the core 'dependencies' list. Consider removing this list.
-sdk = [
-    "grpcio >= 1.56.0",
-    "grpcio-tools >= 1.62.1",
-    "protobuf >= 4.23.3",
-    "grpcio-reflection >=1.58.0",
-    "grpcio-health-checking >=1.58.0",
-    "confz >= 2.0.1",
-    "pydantic >= 2.0",
-    "click >= 8.1.7",
-]
+[packages.optional-dependencies]
 
 dev = [
     "pip-tools == 7.3.0",
     "pytest",
     "httpx",
     "ruff",
-]
-
-llama-cpp-python = [
-    "llama-cpp-python == 0.2.56",
-]
-
-vllm = [
-    "pydantic >= 2.3.0",
-    "vllm==0.3.2",
-    "python-dotenv>=1.0.1",
-    "aiostream>=0.5.2",
-]
-
-text-embeddings = [
-    "InstructorEmbedding >= 1.0.1",
-    "torch == 2.1.2",
-    "numpy == 1.26.3",
-    "tqdm == 4.66.1",
-    "sentence-transformers == 2.2.2",
-    "transformers == 4.36.0",
-]
-
-whisper = [
-    "faster-whisper == 0.10.0",
-    "ctranslate2 >= 4.1.0"
 ]
 
 [tool.pip-tools]
