move sdk out of leapfrogai_api

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,4 +20,5 @@ repos:
     rev: v0.2.2
     hooks:
       - id: ruff # Run the linter.
+        exclude: src/leapfrogai_sdk
       - id: ruff-format # Run the formatter.
