--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,11 +41,12 @@ addopts = ["--import-mode=importlib"]
 target-version = "py311"
 # exclude generated grpc code
 exclude = [
-    "src/leapfrogai_api/types/audio",
-    "src/leapfrogai_api/types/chat",
-    "src/leapfrogai_api/types/completion",
-    "src/leapfrogai_api/types/embeddings",
-    "src/leapfrogai_api/types/name",
+    "src/leapfrogai_sdk/chat",
+    "src/leapfrogai_sdk/audio",
+    "src/leapfrogai_sdk/completion",
+    "src/leapfrogai_sdk/embeddings",
+    "src/leapfrogai_sdk/name",
+    "src/leapfrogai_sdk/proto/*",
 ]
 
 
