--- a/packages/llama-cpp-python/zarf.yaml
+++ b/packages/llama-cpp-python/zarf.yaml
@@ -17,7 +17,7 @@ components:
         namespace: leapfrogai
         localPath: chart
         releaseName: llama-cpp-python-model
-        version: 0.0.1 #TODO: Validate this package version
+        version: 0.0.1
         valuesFiles:
           - "llama-cpp-python-values.yaml"
     images:
