--- a/packages/text-embeddings/zarf.yaml
+++ b/packages/text-embeddings/zarf.yaml
@@ -24,7 +24,7 @@ components:
         namespace: leapfrogai
         localPath: chart
         releaseName: text-embeddings-model
-        version: 0.0.1 #TODO: Validate this package version
+        version: 0.0.1
         valuesFiles:
           - "embedding-values.yaml"
     images:
