--- a/packages/vllm/zarf.yaml
+++ b/packages/vllm/zarf.yaml
@@ -17,7 +17,7 @@ components:
         namespace: leapfrogai
         localPath: chart
         releaseName: vllm-model
-        version: 0.0.1 #TODO: Validate this package version
+        version: 0.0.1
         valuesFiles:
           - "vllm-values.yaml"
     images:
