--- a/packages/whisper/zarf.yaml
+++ b/packages/whisper/zarf.yaml
@@ -23,7 +23,7 @@ components:
         namespace: leapfrogai
         localPath: chart
         releaseName: whisper-model
-        version: 0.0.1 #TODO: Validate this package version
+        version: 0.0.1
         valuesFiles:
           - "whisper-values.yaml"
     images:
