--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,7 @@
 [project]
-name = "leapfrogai-api"
-version = "0.5.3"
+name = "leapfrogai"
+version = "0.1.0"
 dependencies = [
-    "fastapi >= 0.109.1",
-    "uvicorn >= 0.23.2",
-    "pydantic",
-    "python-multipart >= 0.0.7", #indirect dep of FastAPI to receive form data for file uploads
-    "watchfiles >= 0.21.0",
-    "grpcio >= 1.56.0",
-    "grpcio-tools >= 1.62.1",
-    "protobuf >= 4.23.3",
-    "grpcio-reflection >=1.58.0",
-    "grpcio-health-checking >=1.58.0",
-    "confz >= 2.0.1",
-    "click >= 8.1.7",
 ]
 requires-python = "~=3.11"
 readme = "README.md"
