--- a/packages/text-embeddings/pyproject.toml
+++ b/packages/text-embeddings/pyproject.toml
@@ -7,8 +7,8 @@ dependencies = [
     "numpy == 1.26.3",
     "tqdm == 4.66.1",
     "sentence-transformers == 2.2.2",
-    "transformers == 4.36.0",    
-    "leapfrogai-api == 0.5.3",
+    "transformers == 4.36.0",
+    "leapfrogai-sdk == 0.1.0",
 ]
 requires-python = "~=3.11"
 readme = "README.md"
