--- a/packages/vllm/pyproject.toml
+++ b/packages/vllm/pyproject.toml
@@ -6,7 +6,7 @@ dependencies = [
     "vllm==0.3.2",
     "python-dotenv>=1.0.1",
     "aiostream>=0.5.2",
-    "leapfrogai-api == 0.5.3",
+    "leapfrogai-sdk == 0.1.0",
 ]
 requires-python = "~=3.11"
 readme = "README.md"
