--- a/packages/text-embeddings/pyproject.toml
+++ b/packages/text-embeddings/pyproject.toml
@@ -17,7 +17,7 @@ readme = "README.md"
 generate-hashes = true
 
 [tool.setuptools]
-packages = ["leapfrogai_api"]
+packages = ["leapfrogai_sdk"]
 package-dir = {"" = "../../src"}
 
 [tool.pytest.ini_options]
