--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ dependencies = [
     "fastapi >= 0.109.1",
     "uvicorn >= 0.23.2",
     "pydantic",
+    "openai",
     "python-multipart >= 0.0.7", #indirect dep of FastAPI to receive form data for file uploads
     "watchfiles >= 0.21.0",
     "grpcio >= 1.56.0",
@@ -19,29 +20,6 @@ requires-python = "~=3.11"
 readme = "README.md"
 
 [project.optional-dependencies]
-
-# NOTE @JPERRY: I have removed 'toml >= 0.10.2', 'pydantic >= 2.3.0', and 'pyyaml >= 6.0.1'
-# TODO @JPERRY: These deps are no in the core 'dependencies' list. Consider removing this list.
-api = [
-    "fastapi >= 0.109.1",
-    "uvicorn >= 0.23.2",
-    "openai >= 0.10.0",
-    "pydantic",
-    "python-multipart >= 0.0.7", #indirect dep of FastAPI to receive form data for file uploads
-    "watchfiles >= 0.21.0",
-]
-
-# TODO @JPERRY: These deps are no in the core 'dependencies' list. Consider removing this list.
-sdk = [
-    "grpcio >= 1.56.0",
-    "grpcio-tools >= 1.62.1",
-    "protobuf >= 4.23.3",
-    "grpcio-reflection >=1.58.0",
-    "grpcio-health-checking >=1.58.0",
-    "confz >= 2.0.1",
-    "pydantic >= 2.0",
-    "click >= 8.1.7",
-]
 
 dev = [
     "pip-tools == 7.3.0",
