--- a/packages/whisper/pyproject.toml
+++ b/packages/whisper/pyproject.toml
@@ -8,6 +8,12 @@ dependencies = [
 requires-python = "~=3.11"
 readme = "README.md"
 
+[project.optional-dependencies]
+
+dev = [
+    "ctranslate2",
+]
+
 [tool.pip-tools]
 generate-hashes = true
 
