--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
 name = "leapfrogai"
 version = "0.1.0"
-dependencies = [
+dependencies = [  # Dev dependencies needed for all of lfai
+    "openai",
     "pip-tools == 7.3.0",
     "pytest",
     "httpx",
@@ -9,16 +10,6 @@ dependencies = [
 ]
 requires-python = "~=3.11"
 readme = "README.md"
-
-[tool.pip-tools]
-generate-hashes = true
-
-[tool.setuptools.packages.find]
-where = ["src"]
-exclude = ["chart"]
-
-[tool.pytest.ini_options]
-addopts = ["--import-mode=importlib"]
 
 [tool.ruff]
 target-version = "py311"
@@ -31,7 +22,6 @@ exclude = [
     "src/leapfrogai_sdk/name",
     "src/leapfrogai_sdk/proto/*",
 ]
-
 
 [build-system]
 requires = ["setuptools"]
