--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -35,7 +35,7 @@ jobs:
         run: docker run -p 50051:50051 -d ghcr.io/defenseunicorns/leapfrogai/repeater:0.3.3
 
       - name: Install Python Deps
-        run: pip install "." "src/leapfrogai_api"
+        run: pip install "." "src/leapfrogai_api" "src/leapfrogai_sdk"
 
       - name: Run Pytest
         run: python -m pytest tests/pytest -v
