--- a/packages/whisper/chart/values.yaml
+++ b/packages/whisper/chart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: "ghcr.io/defenseunicorns/leapfrogai/whisper"
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 0.0.1 #TODO: Validate this package version exists
+  tag: 0.6.0
 
 nameOverride: whisper
 fullnameOverride: ""
