--- a/packages/text-embeddings/pyproject.toml
+++ b/packages/text-embeddings/pyproject.toml
@@ -1,6 +1,8 @@
 [project]
 name = "lfai-text-embeddings"
 version = "0.1.1"
+description = "A LeapfrogAI API-compatible embeddings library wrapper for text-based embedding generation."
+
 dependencies = [
     "InstructorEmbedding >= 1.0.1",
     "torch == 2.1.2",
