--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,11 @@
 [project]
 name = "leapfrogai"
 version = "0.1.0"
+description = "ChatGPT type capabilities for secure, local, air-gapped systems."
+authors = [{ name = "LeapfrogAI Team", email = "ai@defenseunicorns.com" }]
+readme = "README.md"
+license = {file = "LICENSE"}
+
 dependencies = [  # Dev dependencies needed for all of lfai
     "openai",
     "pip-tools == 7.3.0",
@@ -9,10 +14,15 @@ dependencies = [  # Dev dependencies needed for all of lfai
     "ruff",
 ]
 requires-python = "~=3.11"
-readme = "README.md"
+
+[tool.pip-tools]
+generate-hashes = true
 
 [tool.ruff]
 target-version = "py311"
+
+[tool.pytest.ini_options]
+addopts = ["--import-mode=importlib"]
 
 [build-system]
 requires = ["setuptools"]
