--- a/src/leapfrogai_sdk/pyproject.toml
+++ b/src/leapfrogai_sdk/pyproject.toml
@@ -1,6 +1,8 @@
 [project]
 name = "leapfrogai-sdk"
 version = "0.1.0"
+description = "A tool for building gRPC-based model backends for LeapfrogAI"
+
 dependencies = [
     "grpcio >= 1.56.0",
     "grpcio-tools >= 1.62.1",
@@ -12,6 +14,9 @@ dependencies = [
     "click >= 8.1.7",
 ]
 requires-python = "~=3.11"
+
+[project.scripts]
+lfai-cli = "leapfrogai_sdk.cli:cli"
 
 [tool.pip-tools]
 generate-hashes = true
@@ -37,7 +42,6 @@ exclude = [
     "embeddings",
     "name",
 ]
-
 
 [build-system]
 requires = ["setuptools"]
