Fixes bad postgres reference

--- a/packages/supabase/supabase-kubernetes/charts/supabase/values.example.yaml
+++ b/packages/supabase/supabase-kubernetes/charts/supabase/values.example.yaml
@@ -9,7 +9,7 @@ db:
   image:
     repository: supabase/postgres
     pullPolicy: IfNotPresent
-    tag: "latest"
+    tag: "14.1.0.105"
   podSecurityContext:
     readOnlyRootFilesystem: true
     runAsNonRoot: false
