ignore ADR directory to e2e workflow

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -12,6 +12,7 @@ on:
       # Ignore docs and website things
       - "!**.md"
       - "!docs/**"
+      - "!adr/**"
       - "!website/**"
       - "!netlify.toml"
 
