--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -35,6 +35,8 @@ spec:
               value: '###ZARF_VAR_SUPABASE_URL###'
             - name: PUBLIC_SUPABASE_ANON_KEY
               value: '###ZARF_VAR_SUPABASE_ANON_KEY###'
+            - name: PUBLIC_DISABLE_KEYCLOAK
+              value: '###ZARF_VAR_DISABLE_KEYCLOAK###'
 
           resources:
             requests:
