--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -60,6 +60,8 @@
 		"@carbon/layout": "^11.20.0",
 		"@carbon/themes": "^11.32.0",
 		"@carbon/type": "^11.26.0",
+		"@supabase/auth-ui-shared": "^0.1.8",
+		"@supabase/auth-ui-svelte": "^0.2.9",
 		"@supabase/ssr": "^0.1.0",
 		"@supabase/supabase-js": "^2.39.8",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
