chore: Add to uds bundle

--- a/uds-bundles/dev/cpu/uds-bundle.yaml
+++ b/uds-bundles/dev/cpu/uds-bundle.yaml
@@ -35,5 +35,8 @@ packages:
     path: ../../../packages/whisper/
     ref: dev
 
-
+  # UI
+  - name: ui
+    path: ../../../packages/ui/
+    ref: 0.1.8
 
