--- a/uds-bundles/latest/cpu/uds-bundle.yaml
+++ b/uds-bundles/latest/cpu/uds-bundle.yaml
@@ -34,3 +34,8 @@ packages:
   - name: whisper
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/whisper
     ref: 0.6.1
+
+  # UI
+  - name: ui
+    path: ../../../packages/ui/
+    ref: 0.1.8
