--- a/uds-bundles/latest/gpu/uds-bundle.yaml
+++ b/uds-bundles/latest/gpu/uds-bundle.yaml
@@ -10,11 +10,6 @@ packages:
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-api
     ref: 0.6.1
 
-  # Legacy: AI chat, transcription, and summarization frontend
-  - name: leapfrogai-ui
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-ui
-    ref: 0.3.5
-
   # Model for generic chat and summarization
   - name: vllm
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/vllm
@@ -34,3 +29,8 @@ packages:
   - name: whisper
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/whisper
     ref: 0.6.1
+
+  # UI
+  - name: leapfrogai-ui
+    path: ghcr.io/defenseunicorns/leapfrogai/leapfrogai-ui
+    ref: 0.1.8
