--- a/packages/llama-cpp-python/zarf.yaml
+++ b/packages/llama-cpp-python/zarf.yaml
@@ -19,7 +19,9 @@ components:
         namespace: leapfrogai
         localPath: chart
         releaseName: llama-cpp-python-model
+        # x-release-please-start-version
         version: 0.6.1
+        # x-release-please-end
         valuesFiles:
           - "llama-cpp-python-values.yaml"
     images:
