--- a/packages/text-embeddings/zarf.yaml
+++ b/packages/text-embeddings/zarf.yaml
@@ -25,7 +25,9 @@ components:
         namespace: leapfrogai
         localPath: chart
         releaseName: text-embeddings-model
+        # x-release-please-start-version
         version: 0.6.1
+        # x-release-please-end
         valuesFiles:
           - "embedding-values.yaml"
     images:
