--- a/packages/vllm/zarf.yaml
+++ b/packages/vllm/zarf.yaml
@@ -18,7 +18,9 @@ components:
         namespace: leapfrogai
         localPath: chart
         releaseName: vllm-model
+        # x-release-please-start-version
         version: 0.6.1
+        # x-release-please-end
         valuesFiles:
           - "vllm-values.yaml"
     images:
