--- a/uds-bundles/latest/cpu/uds-bundle.yaml
+++ b/uds-bundles/latest/cpu/uds-bundle.yaml
@@ -2,23 +2,31 @@ kind: UDSBundle
 metadata:
   name: leapfrogai
   description: A UDS bundle for deploying LeapfrogAI
+  # x-release-please-start-version
   version: 0.6.1
+  # x-release-please-end
 
 packages:
   # API
   - name: leapfrogai-api
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-api
+    # x-release-please-start-version
     ref: 0.6.1
+    # x-release-please-end
 
   # Chat Model
   - name: llama-cpp-python
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/llama-cpp-python
+    # x-release-please-start-version
     ref: 0.6.1
+    # x-release-please-end
 
   # Text Embeddings Model
   - name: text-embeddings
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/text-embeddings
+    # x-release-please-start-version
     ref: 0.6.1
+    # x-release-please-end
 
   # Legacy: Backend capability for RAG and VectorDB
   - name: rag
@@ -28,12 +36,9 @@ packages:
   # Transcription Model
   - name: whisper
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/whisper
+    # x-release-please-start-version
     ref: 0.6.1
-
-  # Legacy: AI chat, transcription, and summarization frontend
-  - name: leapfrogai-ui
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-ui
-    ref: 0.3.5
+    # x-release-please-end
 
   # UI - new UI TODO - point to ghcr image after Sprint 0.7.0
   - name: lfaiui
