chore: restrict e2e tests from running on lfai-ui changes

--- a/.github/workflows/e2e-shim.yaml
+++ b/.github/workflows/e2e-shim.yaml
@@ -22,6 +22,10 @@ on:
       # Catch pytests
       - "tests/pytest/**"
 
+      # Catch LFAI-UI things
+      - "src/leapfrogai_ui/**"
+      - "packages/ui/**"
+
 
 permissions:
   contents: read
