--- a/packages/whisper/pyproject.toml
+++ b/packages/whisper/pyproject.toml
@@ -5,7 +5,7 @@ description = "A LeapfrogAI API-compatible faster-whisper wrapper for audio tran
 
 dependencies = [
     "faster-whisper == 0.10.0",
-    "leapfrogai-sdk == 0.1.0",
+    "leapfrogai-sdk",
 ]
 requires-python = "~=3.11"
 readme = "README.md"
@@ -13,7 +13,8 @@ readme = "README.md"
 [project.optional-dependencies]
 
 dev = [
-    "ctranslate2",
+    "ctranslate2 == 4.1.0",
+    "transformers[torch] == 4.39.3",
 ]
 
 [tool.pip-tools]
